# Grim-Language-Tools

./: README.md  pyproject.toml  requirements.txt
grim_language_tools/audio/: silence.py  utils.py
grim_language_tools/text/: evaluations.py
grim_language_tools/utils/: utils.py
grim_modal_tools/: __init__.py
grim_modal_tools/audio/: fade.py  resample.py  silence.py  utils.py
grim_modal_tools/text/: evaluations.py  utils.py
grim_modal_tools/utils/: __init__.py  utils.py
