[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grim-language-tools"
dynamic = ["dependencies"]
description = "Grim Language Tools - Utilities for simplifying and enhancing multi-modal generation"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
version = "0.0.1"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
